Istio configs/DestinationRules.yaml
# httpbin-circuit-breaker.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: httpbin-circuit-breaker
  namespace: testing
spec:
  host: httpbin 
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1 
        http2MaxRequests: 100    
        maxRequestsPerConnection: 1 
    outlierDetection:
      consecutive5xxErrors: 3 
      interval: 10s         
      baseEjectionTime: 30s 
      maxEjectionPercent: 100
